<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EquiPack</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ble_connect_btn">Connect</string>
    <string name="ble_btn">bleButton</string>
    <string name="ble_writeA1_btn">Write</string>
    <string name="ble_loopA2_btn">Poll</string>
    <string name="ble_notify_btn">Notify</string>

    <string name="ble_title">BLE</string>
    <string name="settings_title">Settings</string>
    <string name="preferences_title">Preferences</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="weight_title">Content Weight</string>
    <string name="feedback_title">Strap Optimization</string>
    <string name="option_drawer_title">Features</string>
    <string name="dashboard_graph_title">Welcome!</string>

    <string name="ble_fragment">BLE Fragment</string>
    <string name="feedback_fragment">Feedback Fragment</string>
    <string name="weight_fragment">Weight of Contents</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ble_fragment_log_id">BLELogID</string>

    <string name="settings_device_name_id">deviceNamePreference</string>
    <string name="settings_device_name_title">Device Name</string>
    <string name="settings_device_name_summary">The unique identifier for your personal EquiPack</string>
    <string name="settings_device_name_key">prefDeviceName</string>

    <string name="settings_UUIDService_id">UUIDServicePreference</string>
    <string name="settings_UUIDService_title">Service UUID</string>
    <string name="settings_UUIDService_summary">The unique device name for your personal EquiPack</string>
    <string name="settings_UUIDService_key">prefServiceUUID</string>
    <string name="settings_UUIDService_default">6e400001-b5a3-f393-e0a9-e50e24dcca9e</string>

    <string name="settings_UUIDCharacteristicR_id">UUIDCharacteristicRPreference</string>
    <string name="settings_UUIDCharacteristicR_title">"Read" Characteristic UUID</string>
    <string name="settings_UUIDCharacteristicR_summary">The unique Read characteristic of your EquiPack</string>
    <string name="settings_UUIDCharacteristicR_key">prefCharacteristicRUUID</string>
    <string name="settings_UUIDCharacteristicR_default">6e400003-b5a3-f393-e0a9-e50e24dcca9e</string>

    <string name="settings_UUIDCharacteristicW_id">UUIDCharacteristicWPreference</string>
    <string name="settings_UUIDCharacteristicW_title">"Write" Characteristic UUID</string>
    <string name="settings_UUIDCharacteristicW_summary">The unique Write characteristic of your EquiPack</string>
    <string name="settings_UUIDCharacteristicW_key">prefCharacteristicWUUID</string>
    <string name="settings_UUIDCharacteristicW_default">6e400002-b5a3-f393-e0a9-e50e24dcca9e</string>

    <string name="settings_inputDone_id">inputDoneMeansAddPreference</string>
    <string name="settings_inputDone_title">Done Means Add Input</string>
    <string name="settings_inputDone_summary">On the dashboard, should pressing done when entering an input automatically add the point to the graph?</string>
    <string name="settings_inputDone_key">prefInputDoneMeansAdd</string>
    <string name="settings_inputDone_default">false</string>

    <string name="settings_writeValue_id">UUIDWriteValuePreference</string>
    <string name="settings_writeValue_title">Write value</string>
    <string name="settings_writeValue_summary">The value you would like to write in BLE testing (20 bytes)</string>
    <string name="settings_writeValue_key">prefWriteValue</string>
    <string name="settings_writeValue_default">01abcdef12345678900000000000000000000000</string>

    <string name="settings_weight_id">weightPreference</string>
    <string name="settings_weight_title">Weight (lbs)</string>
    <string name="settings_weight_summary">Your weight</string>
    <string name="settings_weight_key">prefWeight</string>
    <string name="settings_weight_default">140</string>

    <string name="settings_weightKg_id">weightInKgPreference</string>
    <string name="settings_weightKg_title">Weight (kg)</string>
    <string name="settings_weightKg_summary">Should weights be displayed in KG?</string>
    <string name="settings_weightKg_key">weightInKg</string>
    <string name="settings_weightKg_default">false</string>

    <string name="settings_debug_mode_id">debugMode</string>
    <string name="settings_debug_mode_title">Developer Mode</string>
    <string name="settings_debug_mode_summary">Activate Debug Mode</string>
    <string name="settings_debug_mode_key">debugMode_key</string>
    <string name="settings_debug_mode_default">false</string>

    <string name="settings_simulate_id">simulation</string>
    <string name="settings_simulate_title">Simulation Mode</string>
    <string name="settings_simulate_summary">Simulate Equipack analytics</string>
    <string name="settings_simulate_key">simulate_key</string>
    <string name="settings_simulate_default">false</string>

    <string name="UUID_regex">[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}</string>
    <string name="writeValue_regex">[0]{1}-[12]{1}-[a-fA-F0-9]{0,38}</string>

    <string name="bleBundleSetup">bleBundleSetup</string>
    <string name="bleLogCharsSetup">bleLogCharsSetup</string>
    <string name="bleButtonStates">bleButtonStates</string>
    <string name="new_data_input_hint">y-value</string>
    <string name="add_data_btn">Optimize!</string>
    <string name="dash_cal_btn">Calibrate</string>

    <string name="dashboardGraphRestore">dashboardGraphRestore</string>
    <string name="dashboardGraphSeries">dashboardGraphSeries</string>
    <string name="dashboardNumberOfRestorableSeries">dashboardGraphRestore</string>
    <string name="weight_in_kg_switch_text">Change to weight in kg in "settings".</string>
    <string name="weight_in_lbs_switch_text">Change to weight in lbs in "settings".</string>
    <string name="get_weight_button_text">Get Pack Weight!</string>
    <string name="weightInKgStateAll">weightInKgStateAll</string>
    <string name="weightInKgStateBooleanKey">weightInKgStateBooleanKey</string>
    <string name="calebrate_btn_text">Calibrate</string>
    <string name="weightDisplayedKey">weightDisplayedKey</string>



</resources>
