<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brentonchasse.myapplication.WeightFragment"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/weight_fragment"
        android:background="@android:color/black"
        android:textColor="@android:color/holo_blue_light"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:inputType="none"
        android:textSize="40dp"
        android:layout_weight="0.15"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="00.00 lbs"
            android:id="@+id/weightTextView"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/holo_green_light"
            android:textSize="75dp"
            android:textIsSelectable="true"
            android:background="@android:color/black"
            android:layout_margin="3dp"/>
    </FrameLayout>

    <TextView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:id="@+id/weightInKgSwitch"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/holo_blue_light"
        android:textAlignment="inherit"
        android:text="@string/weight_in_kg_switch_text"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical|end"
        android:layout_gravity="right"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:text="@string/calebrate_btn_text"
        android:id="@+id/calibrateBtn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/widget_edittext_dark"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:clickable="true"
        android:enabled="true"
        android:onClick="onFragmentClickEvent"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.05"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_weight_button_text"
        android:id="@+id/getWeightBtn"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:onClick="onFragmentClickEvent"/>

</LinearLayout>
