<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brentonchasse.myapplication.DashboardFragment"
    android:background="@android:color/background_dark">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_graph_title"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="30sp"
            />
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/dashBoardGraph"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/black"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_blue_light">
            <EditText
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/yInput"
                android:singleLine="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:selectAllOnFocus="true"
                android:hint="@string/new_data_input_hint"
                android:textColorHint="@android:color/tertiary_text_dark"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:textColor="@android:color/holo_blue_light"
                android:clickable="true"
                android:background="@android:color/background_dark"
                android:textAlignment="center"/>
        </LinearLayout>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/add_data_btn"
            android:id="@+id/addDataBtn"
            android:textSize="15sp"
            android:onClick="onFragmentClickEvent"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginTop="15dp"
            android:clickable="true"/>
    </LinearLayout>
</FrameLayout>
